sequelizeとMySQLをインストール

--- a/doc/2.md
+++ b/doc/2.md
@@ -2,7 +2,18 @@
 今回はAPIにアクセスしてデータベースにデータを保存するところまでやります。
 
 ## データベースを作成しよう
+sequelizeとMySQLを使います。
+まずはインストールしましょう。
 
+※ MySQLはMacにインストールされている前提です。
+
+```
+# デフォルトでインストールされているMySQLを削除します
+$ yarn remove mysql
+
+$ yarn add sequelize
+$ yarn add mysql2
+```
 
 ## テーブルを作成しよう
 
