--- a/doc/2.md
+++ b/doc/2.md
@@ -105,7 +105,7 @@ Supportモデルを作成します。
 下記のコマンドを実行するとmodelsフォルダ内にsupport.jsが作られ、migrationsフォルダにmodelのcreate用のmigrationファイルが作成されます。
 
 ```
-$ node_modules/.bin/sequelize model:create --name Support --attributes support_id:integer,name:string,prefecture_id:integer
+$ node_modules/.bin/sequelize model:create --name Support --underscored --attributes support_id:integer,name:string,prefecture_id:integer
 ```
 
 ### マイグレーションを実行しよう
@@ -139,11 +139,12 @@ $ node_modules/.bin/sequelize init
 
 モデルの作成は、`model:generate`コマンドで行います。このコマンドは２つの引数を取ります。
 
-* `name`：モデル（テーブル）の名前になります。単数形で、先頭の文字を大文字にします。
-* `attributes`：モデル（テーブル）の属性（カラム）のリストになります。
+* `name`：モデル（テーブル）の名前になります。単数形で、先頭の文字を大文字にします
+* `attributes`：モデル（テーブル）の属性（カラム）のリストになります
+* `underscored`：カラム名をスネークケースにします。`created_at`と`updated_at`をスネークケースにしたい場合はこのオプションを付けます
 
 ```
-$ node_modules/.bin/sequelize model:generate --name User --attributes firstName:string,lastName:string,email:string
+$ node_modules/.bin/sequelize model:generate --name User --underscored --attributes firstName:string,lastName:string,email:string
 ```
 
 このコマンドを実行することで、`XXXXXXXXXXXXXX-create-user.js`というファイルが`migrations`フォルダ内に作成されます。
@@ -151,7 +152,7 @@ $ node_modules/.bin/sequelize model:generate --name User --attributes firstName:
 ※ Sequelizeは`migrations`フォルダ内に作成されるこのモデルのファイルを用いてテーブルをマイグレーションを実行します。このファイルはデータベースへの変更のログのようなものです。
 
 #### マイグレーションの実行
-このステップを実行するまで、データベースには何の変更も加えられていません。まだUserモデルを作成せよというマイグレーションファイルを作成しただけです。`db:migrate`コマンドを実行することで、データベースにテーブルが実際に作成されます。
+このステップを実行するまで、データベースには何の変更も加えられていません。まだUsersモデルを作成せよというマイグレーションファイルを作成しただけです。`db:migrate`コマンドを実行することで、データベースにテーブルが実際に作成されます。
 
 ```
 $ node_modules/.bin/sequelize db:migrate
