ロールバックについて追記

--- a/doc/2.md
+++ b/doc/2.md
@@ -164,6 +164,19 @@ $ node_modules/.bin/sequelize db:migrate
 * `SequelizeMeta`テーブルの情報を元に、まだ実行されていないマイグレーションファイルを見つけます
 * そのマイグレーションファイルの内容に基づいてテーブルを作成します
 
+#### マイグレーションを元に戻す
+データベースを以前の状態に戻すには、`db:migrate:undo`コマンドを実行します。このコマンドは直前のマイグレーションの状態にデータベースを戻します。
+
+```
+$ node_modules/.bin/sequelize db:migrate:undo
+```
+
+データベースを初期の状態に戻したい時は`db:migrate:undo:all`コマンドを使います。特定のマイグレーションの状態に戻したい時は`--to`オプションを付けます。
+
+```
+$ node_modules/.bin/sequelize db:migrate:undo:all --to XXXXXXXXXXXXXX-create-posts.js
+```
+
 ## APIを叩こう
 
 ## APIから取得したデータをデータベースに保存しよう
