underscoredオプションを追加

--- a/doc/2.md
+++ b/doc/2.md
@@ -105,7 +105,7 @@ Supportモデルを作成します。
 下記のコマンドを実行するとmodelsフォルダ内にsupport.jsが作られ、migrationsフォルダにmodelのcreate用のmigrationファイルが作成されます。
 
 ```
-$ node_modules/.bin/sequelize model:create --name Support --underscored --attributes support_id:integer,name:string,prefecture_id:integer
+$ node_modules/.bin/sequelize model:create --name support --underscored --attributes support_id:integer,name:string,prefecture_id:integer
 ```
 
 ### マイグレーションを実行しよう
@@ -139,12 +139,12 @@ $ node_modules/.bin/sequelize init
 
 モデルの作成は、`model:generate`コマンドで行います。このコマンドは２つの引数を取ります。
 
-* `name`：モデル（テーブル）の名前になります。単数形で、先頭の文字を大文字にします
+* `name`：モデル（テーブル）の名前になります
 * `attributes`：モデル（テーブル）の属性（カラム）のリストになります
 * `underscored`：カラム名をスネークケースにします。`created_at`と`updated_at`をスネークケースにしたい場合はこのオプションを付けます
 
 ```
-$ node_modules/.bin/sequelize model:generate --name User --underscored --attributes firstName:string,lastName:string,email:string
+$ node_modules/.bin/sequelize model:generate --name user --underscored --attributes firstName:string,lastName:string,email:string
 ```
 
 このコマンドを実行することで、`XXXXXXXXXXXXXX-create-user.js`というファイルが`migrations`フォルダ内に作成されます。
@@ -175,6 +175,45 @@ $ node_modules/.bin/sequelize db:migrate:undo
 
 ```
 $ node_modules/.bin/sequelize db:migrate:undo:all --to XXXXXXXXXXXXXX-create-posts.js
+```
+
+#### 既存テーブルへのカラム追加
+まずは既存テーブルのマイグレーションスクリプトの雛型を作成します。
+
+```
+$ node_modules/.bin/sequelize migration:generate --name user
+```
+
+`users`テーブルに`address`と`prefecture_id`カラムを追加します。
+`queryInterface.addColumn`メソッドにテーブル名、カラム名とカラムの詳細設定を渡します。
+`down`にはロールバック用のカラム削除処理を記述します。
+
+```XXXXXXXXXXXXXX-create-user.js
+'use strict';
+
+module.exports = {
+  up: function (queryInterface, Sequelize) {
+    return [
+      queryInterface.addColumn('users', 'address', {
+        type: Sequelize.STRING,
+        after: 'email'
+      }),
+      queryInterface.addColumn('users', 'prefecture_id', {
+        type: Sequelize.INTEGER,
+        allowNull: false,
+        defaultValue: 0,
+        after: 'address'
+      })
+    ];
+  },
+
+  down: function (queryInterface, Sequelize) {
+    return [
+      queryInterface.removeColumn('users', 'address'),
+      queryInterface.removeColumn('users', 'prefecture_id')
+    ];
+  }
+};
 ```
 
 ## APIを叩こう
