単語名を大文字にする

--- a/doc/2.md
+++ b/doc/2.md
@@ -105,7 +105,7 @@ Supportモデルを作成します。
 下記のコマンドを実行するとmodelsフォルダ内にsupport.jsが作られ、migrationsフォルダにmodelのcreate用のmigrationファイルが作成されます。
 
 ```
-$ node_modules/.bin/sequelize model:create --name support --underscored --attributes support_id:integer,name:string,prefecture_id:integer
+$ node_modules/.bin/sequelize model:create --name Support --attributes supportId:integer,name:string,prefectureId:integer
 ```
 
 ### マイグレーションを実行しよう
@@ -141,10 +141,9 @@ $ node_modules/.bin/sequelize init
 
 * `name`：モデル（テーブル）の名前になります
 * `attributes`：モデル（テーブル）の属性（カラム）のリストになります
-* `underscored`：カラム名をスネークケースにします。`created_at`と`updated_at`をスネークケースにしたい場合はこのオプションを付けます
 
 ```
-$ node_modules/.bin/sequelize model:generate --name user --underscored --attributes firstName:string,lastName:string,email:string
+$ node_modules/.bin/sequelize model:generate --name User --attributes firstName:string,lastName:string,email:string
 ```
 
 このコマンドを実行することで、`XXXXXXXXXXXXXX-create-user.js`というファイルが`migrations`フォルダ内に作成されます。
@@ -160,7 +159,7 @@ $ node_modules/.bin/sequelize db:migrate
 
 このコマンドは以下のことを実行します。
 
-* データベース内の`SequelizeMeta`テーブルを呼び出します。このテーブルはどのマイグレーションが実行されたのかを記録するために使われています
+* データベース内の`SequelizeMeta`テーブルを呼び出します。このテーブルはどのマイグレーションが実行されたのかを記録するために使われています。実行されたマイグレーションファイの名前が保存されています
 * `SequelizeMeta`テーブルの情報を元に、まだ実行されていないマイグレーションファイルを見つけます
 * そのマイグレーションファイルの内容に基づいてテーブルを作成します
 
@@ -174,31 +173,31 @@ $ node_modules/.bin/sequelize db:migrate:undo
 データベースを初期の状態に戻したい時は`db:migrate:undo:all`コマンドを使います。特定のマイグレーションの状態に戻したい時は`--to`オプションを付けます。
 
 ```
-$ node_modules/.bin/sequelize db:migrate:undo:all --to XXXXXXXXXXXXXX-create-posts.js
+$ node_modules/.bin/sequelize db:migrate:undo:all --to XXXXXXXXXXXXXX-create-users.js
 ```
 
 #### 既存テーブルへのカラム追加
 まずは既存テーブルのマイグレーションスクリプトの雛型を作成します。
 
 ```
-$ node_modules/.bin/sequelize migration:generate --name user
+$ node_modules/.bin/sequelize migration:generate --name User
 ```
 
-`users`テーブルに`address`と`prefecture_id`カラムを追加します。
+作成されたマイグレーションファイルに追記して、`users`テーブルに`address`と`prefectureId`カラムを追加します。
 `queryInterface.addColumn`メソッドにテーブル名、カラム名とカラムの詳細設定を渡します。
 `down`にはロールバック用のカラム削除処理を記述します。
 
-```XXXXXXXXXXXXXX-create-user.js
+```XXXXXXXXXXXXXX-user.js
 'use strict';
 
 module.exports = {
   up: function (queryInterface, Sequelize) {
     return [
-      queryInterface.addColumn('users', 'address', {
+      queryInterface.addColumn('Users', 'address', {
         type: Sequelize.STRING,
         after: 'email'
       }),
-      queryInterface.addColumn('users', 'prefecture_id', {
+      queryInterface.addColumn('Users', 'prefectureId', {
         type: Sequelize.INTEGER,
         allowNull: false,
         defaultValue: 0,
@@ -209,8 +208,8 @@ module.exports = {
 
   down: function (queryInterface, Sequelize) {
     return [
-      queryInterface.removeColumn('users', 'address'),
-      queryInterface.removeColumn('users', 'prefecture_id')
+      queryInterface.removeColumn('Users', 'address'),
+      queryInterface.removeColumn('Users', 'prefectureId')
     ];
   }
 };
