モデルにも追記する

--- a/doc/2.md
+++ b/doc/2.md
@@ -215,6 +215,28 @@ module.exports = {
 };
 ```
 
+`user.js`モデルにもカラムの情報を追記します。
+
+```models/user.js
+'use strict';
+module.exports = (sequelize, DataTypes) => {
+  var User = sequelize.define('User', {
+    firstName: DataTypes.STRING,
+    lastName: DataTypes.STRING,
+    email: DataTypes.STRING,
++   address: DataTypes.STRING,
++   prefectureId: DataTypes.INTEGER
+  }, {
+    classMethods: {
+      associate: function(models) {
+        // associations can be defined here
+      }
+    }
+  });
+  return User;
+};
+```
+
 ## APIを叩こう
 
 ## APIから取得したデータをデータベースに保存しよう
