2ブランチを完成させる

--- a/doc/2.md
+++ b/doc/2.md
@@ -1,5 +1,5 @@
-# 2. APIにアクセスしてデータを保存しよう
-今回はAPIにアクセスしてデータベースにデータを保存するところまでやります。
+# 2. テーブルを保存しよう
+今回はデータベースにテーブルを作成するところまでやります。
 
 # データベースを作成しよう
 ## sequelizeとMySQLをインストールしよう
@@ -236,7 +236,3 @@ module.exports = (sequelize, DataTypes) => {
   return User;
 };
 ```
-
-## APIを叩こう
-
-## APIから取得したデータをデータベースに保存しよう
