解説を補足

--- a/doc/3.md
+++ b/doc/3.md
@@ -1,9 +1,7 @@
-# 3. APIにアクセスしてデータベースに保存しよう
-今回はAPIにアクセスして、取得してきたデータをデータベースに保存するところまでやります。
+# 3. APIにアクセスしよう
+今回はAPIにアクセスするところまでやります。
 
-# APIにアクセスしよう
-まずはAPIにアクセスしましょう。
-今回はAPIにアクセスするのに`request`を使用します。
+APIにアクセスするのに`request`を使用します。
 
 ```
 $ yarn add request
@@ -38,7 +36,7 @@ $ node lib/shisaku.js
 
 これで施策内容が返ってくれば成功です。
 
-## 汎用的に使えるようにしよう
+# 汎用的に使えるようにしよう
 次に、今の内容をより汎用的に扱えるようにしていきます。
 
 1. APIへのアクセスを`Shisaku`クラスの中にまとめる（複数のAPIアクセスを一箇所で扱えるようにする）
@@ -65,6 +63,8 @@ module.exports = class Shisaku {
 
     this.get(this.SUPPORT_URL, qs);
   }
+
+  // 他のAPIへのアクセスはメソッドをここに追記する
 
   get(url, qs) {
     request.get({
