処理を共通化する

--- a/doc/3.md
+++ b/doc/3.md
@@ -57,25 +57,20 @@ module.exports = class Shisaku {
 
   // 制度情報を取得する
   support() {
-    const qs = {
-      count: 1
-    };
-
-    this.get(this.SUPPORT_URL, qs);
-  }
-
-  // 他のAPIへのアクセスはメソッドをここに追記する
-
-  get(url, qs) {
     request.get({
-      uri: url,
+      uri: this.SUPPORT_URL,
       headers: {'Content-type': 'application/json'},
       json: true,
-      qs: qs
+      qs: {
+        count: 1
+      }
     }, function(err, req, data){
       console.log(data);
     });
   }
+
+  // 他のAPIへのアクセスはメソッドをここに追記する
+
 };
 ```
 
