APIから取得したデータをパースする

--- a/doc/4.md
+++ b/doc/4.md
@@ -1,3 +1,10 @@
+# 4. データベースに保存しよう
+前回APIにアクセスして取得してきたデータをデータベースに保存しましょう。
+
+## APIから取得したデータをパースしよう
+はじめにAPIから取得したデータを、データベースに保存できるように加工しましょう。
+
+```lib/shisaku.js
 'use strict';
 
 const request = require('request');
@@ -33,3 +40,4 @@ module.exports = class Shisaku {
   // 他のAPIへのアクセスはメソッドをここに追記する
 
 };
+```
