データベースの内容を表示中

--- a/doc/5.md
+++ b/doc/5.md
@@ -11,7 +11,12 @@ $ rm routes/users.js
 `app.js`からも関連する記述を削除します。
 
 ```app.js
-// この行を削除する
+// これらの行を削除する
+- var users = require('./routes/users');
+
 - app.use('/users', users);
 ```
 
+# ルーティングの設定
+
+# データベースの情報を表示する
